@@ -2,8 +2,10 @@ package org.example.client.console;
 
 import io.netty.channel.Channel;
 import org.example.protocol.request.CreateGroupRequestPacket;
+import org.example.util.SessionUtil;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Scanner;
 
 public class CreateGroupConsoleCommand implements ConsoleCommand{
@@ -14,7 +16,11 @@ public class CreateGroupConsoleCommand implements ConsoleCommand{
     public void exec(Scanner scanner, Channel channel) {
         System.out.print("【拉人群聊】输入 userId 列表， userId之间英文逗号隔开：");
         String userIds = scanner.next();
-        CreateGroupRequestPacket request = CreateGroupRequestPacket.builder().userIdList(Arrays.asList(userIds.split(USER_ID_SPLIT))).build();
+        List<String> groupIds = new ArrayList<>();
+        groupIds.add(SessionUtil.getSession(channel).getUserId());
+        groupIds.addAll(List.of(userIds.split(USER_ID_SPLIT)));
+        CreateGroupRequestPacket request = CreateGroupRequestPacket.builder()
+                .userIdList(groupIds).build();
         channel.writeAndFlush(request);
     }
 }
